fixed sidebar hover that covers scroll bar

--- a/app/stylesheets/components/sidebar/_.css
+++ b/app/stylesheets/components/sidebar/_.css
@@ -151,6 +151,7 @@
   justify-content: flex-start;
   height: 40px;
   cursor: pointer;
+  width: 225px;
 }
 
 .sidebar-item:hover {
